<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@drawable/school">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="587dp"
        android:layout_marginBottom="470dp"
        android:orientation="vertical">


        <TextView
            android:id="@+id/cal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="170dp"
            android:layout_marginEnd="45dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/calculate_your_grades"
            android:textColor="#fac113"
            android:textSize="30sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="92dp"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/quiz"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:background="#fdfbe4"
                android:ems="10"
                android:fontFamily="sans-serif-black"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:hint="@string/quizz"
                android:textColor="#FF5722"
                android:textSize="30sp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/homework"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="#fdfbe4"
                android:ems="10"
                android:fontFamily="sans-serif-black"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:hint="@string/homework"
                android:textColor="#FF5722"
                android:textSize="30sp"
                android:autofillHints="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/midterm"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="10dp"
                android:background="#fdfbe2"
                android:ems="10"
                android:fontFamily="sans-serif-black"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:hint="@string/midterm"
                android:textColor="#FF5722"
                android:textSize="30sp"
                android:autofillHints="" />

            <EditText
                android:id="@+id/finals"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:background="#fdfbe2"
                android:ems="10"
                android:fontFamily="sans-serif-black"
                android:inputType="textPersonName"
                android:padding="8dp"
                android:hint="@string/finals"
                android:textColor="#FF5722"
                android:textSize="30sp"
                android:autofillHints="" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="102dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/reset"
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="20dp"
                android:layout_weight="1"
                android:backgroundTint="#2fc7b5"
                android:text="@string/reset"
                android:textSize="30sp"
                style="?android:attr/buttonBarButtonStyle" />

            <Button
                android:id="@+id/calc"
                android:layout_width="220dp"
                android:layout_height="80dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:backgroundTint="#3485d7"
                android:text="@string/calculate"
                android:textSize="25sp"
                style="?android:attr/buttonBarButtonStyle" />
        </LinearLayout>

        <TextView
            android:id="@+id/result"
            android:layout_gravity="center"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:textSize="40sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:background="#FF5722"
            android:paddingStart="43dp"
            android:text="@string/result"
            tools:ignore="RtlSymmetry" />


    </LinearLayout>

</LinearLayout>